@@ -1,3 +1,3 @@
 {
-    "Dark Mode": "True"
+    "Dark Mode": "False"
 }
