@@ -1,16 +1,28 @@
-<!--DOCTYPE html-->
+<!DOCTYPE html>
+<!--
+#   |                                                          |
+# --+----------------------------------------------------------+--
+#   |   Code by : yasserbdj96                                  |
+#   |   Email   : yasser.bdj96@gmail.com                       |
+#   |   Github  : https://github.com/yasserbdj96               |
+#   |   BTC     : bc1q2dks8w8uurca5xmfwv4jwl7upehyjjakr3xga9   |
+# --+----------------------------------------------------------+--  
+#   |        all posts #yasserbdj96 ,all views my own.         |
+# --+----------------------------------------------------------+--
+#   |                                                          |
+-->
 <html lang="en">
     <head>
-        <!-- code by : yasserbdj96 -->
-        <!-- email : yasser.bdj96@gmail.com -->
         <title>hiphp : login</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=5, viewport-fit=cover">
+        <meta name="description" content="hiphp - free & open source project for create a BackDoor to control PHP-based sites.">
         <script type="text/javascript" src="./eel.js"></script>
         <script type="text/javascript" src="./script.js"></script>
         <script type="text/javascript" src="./include.js"></script>
         <link rel="stylesheet" href="./style.css">
         <link rel="icon" href="./favicon.ico">
+        <link rel="apple-touch-icon" href="./favicon.ico">
         <link rel="stylesheet" type="text/css" href="./font-awesome/font-awesome.min.css" />
         <script src="./index.js" defer></script>
         <link rel="manifest" href="./manifest.webmanifest">
@@ -74,6 +86,10 @@
             <input type="text" id="key" placeholder="Key" style="width:50%;"><br>
             <button class="button" onclick="connect()"><i class="fa fa-sign-in"></i> Login</button><br>
             <div class="version" id="version"></div>
+        </div>
+
+        <div id="notwork">
+            <button onclick="location.reload();" class="button"><i class="fa fa-refresh"></i> Refresh</button>
         </div>
     </body>
 </html>
