@@ -7,7 +7,9 @@
     <link rel="icon" href="./favicon.ico">
   </head>
   <body>
-    <h1 style="text-align:center;">soon</h1>
+    <div class="tocenter">
+      <h1 style="text-align:center;">Website is under review & updating ...</h1>
+    </div>
     <script  src="./script.js"></script>
   </body>
 </html>
