@@ -7,3 +7,14 @@ html,body {
   height: 100%;
   overflow: hidden;
 }
+
+/**/
+.tocenter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -50%;
+  width: 100%;
+  height: 100px;
+}
