@@ -1,5 +1,7 @@
 ## 0.2.31-beta [Beta Version]
  - Add PWA (Service Worker) to "hiphp-desktop".
+ - Updated installation options.
+ - Update site files.
  - Bug fixes & performance improvements.
 
 ## 0.2.30 [02-11-2022][Last Version]
